# Heart-of-the-Blockchain

./: .gitignore  Proofs.md  README.md  dns-config.js  heart_of_blockchain.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  prepare-repo.sh
.cursor/rules/: light-protocol.mdc  merkle_tree_rules.mdc  solana_workflow.mdc  solidity_rules.mdc  zk_workflow.mdc
ZK-STACK/: Anchor.toml  Cargo.lock.bak  Cargo.toml  package.json  pnpm-lock.yaml
ZK-STACK/programs/zk_donations/: Cargo.toml
ZK-STACK/programs/zk_donations/src/: lib.rs
ZK-STACK/tests/: README.md  campaign.rs  check_campaign.rs  check_campaign1.rs  main.rs  test_donate_compressed.rs  test_initialize_campaign.rs  test_leaf_formatting  test_leaf_formatting.rs  test_merkle_root_update  test_merkle_root_update.rs  test_task2  test_task2.rs  test_withdraw.rs  test_zk_verification  test_zk_verification.rs  zk_donations.js
client/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client/app/: .npmrc  package.json  pnpm-lock.yaml
client/idl/: zk_donations.json
client/src/: chai-shim.d.ts  (+3 more)
docs/: README.md  deployment_devnet.md  prd.txt  technical-design.md  testing-strategy.md  zkimplementation.md
frontend/: package-lock.json  package.json  postcss.config.cjs
scripts/: prd.txt
tests/: README.md  client_sdk_integration.js  e2e-heart_of_blockchain.ts  heart_of_blockchain.ts  merkle_proof_integration.js  transaction_service_integration.js
zk_donations/: package-lock.json
zk_donations/programs/zk_donations/: Cargo.toml
zk_donations/programs/zk_donations/src/: lib.rs
(+36 files in other folders)
