[package]
name = "heart_of_blockchain"
version = "0.1.0"
edition = "2021"

description = "Created with Anchor"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
sbf-out-dir = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
account-compression = { path = "../../../external/light-protocol/programs/account-compression", features = ["cpi"] } 