[package]
name = "zk_donations"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_donations"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
sbf-out-dir = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.29.0"
# Add Light Protocol Account Compression crate dependency
account-compression = { path = "../../../external/light-protocol/programs/account-compression", features = ["cpi"] }
